prevent table content from being squished

--- a/stylesheets/primary-content.css
+++ b/stylesheets/primary-content.css
@@ -95,8 +95,11 @@
   margin-top: 2rem;
   /* the selector for all "main" blocks is too strong for this one :-) */
   max-width: 38rem !important;
+  /* enable table-layout: fixed if you want the table width to be enforced strictly */
+  /* alternative is to wrap table in div and set overflow-x: auto on the wrapper */
+  /*
   table-layout: fixed;
-  overflow-wrap: break-word;
+  */
 }
 
 .primary-content table.tableblock th,
